[GTK] Fix crash when creating webview with g_object_new https://bugs.webkit.org/show_bug.cgi?id=153989

Patch by Danilo Cesar Lemes de Paula <danilo.cesar@collabora.co.uk> on 2016-02-08
Reviewed by Carlos Garcia Campos.

g_object_new(WEBKIT_TYPE_WEB_VIEW, NULL) crashes webkit
as _WebKitWebViewBasePrivate constructor requires a mainloop, but
webkit is only initialized when a context is created (which
doesn't happen with a direct call to g_object_new).

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkit_web_view_base_class_init):

Canonical link: https://commits.webkit.org/172084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196257 268f45cc-cd09-0410-ab3c-d52691b4dbfc